fix spacing

--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -30,7 +30,7 @@ img {
     }
 };
 
-@media only screen and (min-width 520px) and (max-width 612px) {
+@media only screen and (min-width: 520px) and (max-width: 612px) {
     img {
         width: 300px;
     }
